--- a/public/global.css
+++ b/public/global.css
@@ -56,16 +56,15 @@ main {
 }
 .calendar {
   border-radius: var(--radius);
-  margin-top: 2rem;
   padding-top: 6vmin;
   width: 100%;
-  border: 0.5px solid var(--primary);
-  background: rgba(255, 182, 108, 0.03);
+  /* border: 0.5px solid var(--primary); */
+  /* background: rgba(255, 182, 108, 0.03); */
 }
 .calendar h1 {
   text-align: left;
-  padding-left: 3vmin;
-  font-size: 6vmin;
+  /* padding-left: 3vmin; */
+  font-size: 10vmin;
 }
 .days {
   padding-top: 6vmin;
